svg dark mode fixes

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,6 +19,7 @@
   --trial-color: rgb(96, 203, 230);
   /* --ifm-navbar-padding-vertical */
   /* --ifm-navbar-padding-horizontal: 10rem; */
+  --svg-fill-color: var(--ifm-color-primary);
 }
 
 .navbar-sidebar__brand {
@@ -67,12 +68,13 @@
 
 /* Dark theme overrides */
 html[data-theme="dark"] {
-  --ifm-color-primary: #221a52;
+  --ifm-color-primary: #21232a;
   --ifm-heading-color: #fff;
   --ifm-font-color-base: #fff;
   --ifm-menu-color-active: var(--trial-color);
   --ifm-link-color: var(--trial-color);
   --ifm-tabs-color-active: var(--trial-color);
+  --svg-fill-color: #fff;
 }
 
 html[data-theme="dark"] .table-of-contents__link {
@@ -90,4 +92,20 @@ html[data-theme="dark"] .navbar__link--active {
 
 .navbar__inner {
   padding: 0 1rem;
+}
+
+.feature-icons {
+  fill: var(--svg-fill-color);
+}
+
+.feature-icons--stroke {
+  stroke: var(--svg-fill-color);
+}
+
+.text-white {
+  color: #fff;
+}
+
+.hover-text-white:hover {
+  color: #fff;
 }
